--- a/style.css
+++ b/style.css
@@ -6,6 +6,9 @@ body {
 h1 {
   font-size: 50px;
 }
+h2{
+  font-size: 40px;
+}
 .orange-color {
   color: orange;
 }
@@ -13,7 +16,7 @@ img.img-fluid {
   max-width: 100%;
   height: auto;
 }
-section {
+.display-flex {
   display: flex;
   margin-bottom: 150px;
 }
@@ -49,4 +52,30 @@ section {
 }
 .big-dream .half-with p{
   padding-right: 100px;
+}
+.experiences-area{
+  background-image: url(images/exp-bg.png);
+  background-repeat: no-repeat;
+  background-position: left;
+}
+.experiences-item{
+  width: 40%;
+  margin-left: 5%;
+  margin-right: 5%;
+  padding: 15px;
+  box-shadow: 10px 10px 30px gray;
+  border-radius: 15px;
+}
+#full-stack{
+  border-left: 10px solid;
+  border-image: linear-gradient(salmon , tomato);
+  border-image-slice: 1;
+}
+#baby-web{
+  border-left: 10px solid;
+  border-image: linear-gradient(blue , cyan);
+  border-image-slice: 1;
+}
+footer p{
+  text-align: center;
 }
